--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=D, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quête GitHub</title>
 </head>
 <body>
     
