--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Quête GitHub</title>
 </head>
 <body>
-    <h1> What is a commit ? </h1>    
+    <h1> What is a commit ? </h1>   
+    <h2> What is a branch ? </h2>
 </body>
 </html>
